--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </header>
         <nav>
             <button class="nav-buttons" onclick="redirecttohome()">Home</button>
-            <button class="nav-buttons" onclick="redirecttogames()">Games</button>
+            <button class="nav-buttons" onclick="redirecttogames()">Page2</button>
         </nav>
         <section>
             <h2>Section</h2>
