--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <div class="container">
         <header>
-            <h1>JustHomka</h1>
-            <p>Minecraft plugin and web developer</p>
+            <h1>Minimalistic website template</h1>
+            <p>Sample text</p>
         </header>
         <nav>
             <button class="nav-buttons" onclick="redirecttohome()">Home</button>
